# biscotegirl

./: .env  .gitignore  README.md  database.sqlite  pyproject.toml
backend/: main.py  server.py
backend/api/: routes.py
backend/config/: config.py
backend/services/: database.py  discord_notifier.py  planning_checker.py  scraping_service.py
backend/utils/: logger.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ReservationInterface.jsx
frontend/src/components/ui/: alert.jsx
